--- a/client/src/components/Location.scss
+++ b/client/src/components/Location.scss
@@ -8,33 +8,54 @@ $white: #ffffff;
   width: 400px;
   height: 400px;
   border-radius: 50px;
-  padding-top: 9px;
+  padding-top: 14px;
   background-color: $white;
   background-image: url("https://www.transparenttextures.com/patterns/paper.png");
 
   &--name {
     font-weight: bold;
-    margin-top: 10px;
-    font-size: larger;
+    font-size: 30px;
+    height: 50px;
+    display: flex;
+    align-items: center;
   }
 
   &--form {
     display: flex;
     flex-direction: column;
-    justify-content: space-around
+    justify-content: space-around;
+    height: 350px;
   }
 
   &--textbox {
     margin-top: 20px;
-    width: 98%;
+    width: 96%;
 
     & input {
       width: 100%;
       height: 40px;
+      font-size: 20px;
+      border-radius: 5px;
+      border: solid rgb(194, 191, 191) 1px;
+      padding-left: 10px;
+    }
+
+    & :focus {
+      border: solid rgb(194, 191, 191) 1px
     }
   }
 
   &--button {
-    width: 30%;
+    width: 50%;
+    height: 50px;
+    border: solid rgb(194, 191, 191) 1px;
+    background-color: white;
+    border-radius: 5px;
+    
+    &:hover {
+      cursor: pointer;
+      background-color: #2E3B55;
+      color: white;
+    }
   }
 }
