--- a/client/src/components/Venue.scss
+++ b/client/src/components/Venue.scss
@@ -19,7 +19,7 @@ $white: #ffffff;
     justify-content: center;
     border: black solid 2px;
     width: 95%;
-    height: 60%;
+    height: 250px;
     border-radius: 4px;
     border-top-left-radius: 40px;
     border-top-right-radius: 40px;
@@ -29,40 +29,71 @@ $white: #ffffff;
   &--name {
     font-style: italic;
     font-weight: bold;
+    margin: 5px;
   }
 }
 
 .data {
   display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
+  justify-content: space-between;
+  flex-direction: row;
   align-items: center;
-  height: 50%;
-  width: 100%;
-  padding-top: 5px;
-  padding-bottom: 6px;
+  width: 96%;
+  height: 100px;
 
-  &--values {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    border-radius: 4px;
-    border: black solid 2px;
-    height: 20%;
-    width: 95%;
-    background-color: $white;
-  }
-
-  &--description {
-    display: flex;
+  &--left{
+    height: 50%;
+    width: 61%;
     border: black solid 2px;
     border-radius: 4px;
     border-bottom-left-radius: 40px;
-    border-bottom-right-radius: 40px;
-    margin-top: 5px;
     height: 100%;
-    width: 95%;
-    margin-bottom: 6px;
     background-color: $white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+    padding-left: 25px;
+  }
+
+  &--right {
+    display: flex;
+    border: black solid 2px;
+    border-radius: 4px;
+    border-bottom-right-radius: 40px;
+    background-color: $white;
+    height: 100%;
+    width: 28%;
+    align-items: center;
+    justify-content: center;
+
+    & svg {
+      font-size: 40px;
+      border-color: solid black 3px;
+      color: black;
+      padding: 35px;
+
+      &:hover {
+        color: white;
+      }
+      }
+
+    &:hover {
+      cursor: pointer;
+      background-color: #2E3B55;
+    }
+
+   
+  }
+
+  &--values {
+    font-size: 18px;
+    border-bottom: solid rgb(180, 180, 180) 2px;
+    width: 90%;
+    display: flex;
+
+    &--status {
+      font-size: 18px;
+    }
   }
 }
