--- a/client/src/components/Venue.scss
+++ b/client/src/components/Venue.scss
@@ -17,13 +17,23 @@ $white: #ffffff;
     display: flex;
     align-items: center;
     justify-content: center;
-    border: black solid 2px;
     width: 95%;
     height: 250px;
     border-radius: 4px;
     border-top-left-radius: 40px;
     border-top-right-radius: 40px;
     background-color: $white;
+
+    & img {
+      border: black solid 2px;
+      object-fit: fill;
+      height: 100%;
+      width: 100%;
+      border-top-left-radius: 40px;
+      border-top-right-radius: 40px;
+      border-bottom-right-radius: 4px;
+      border-bottom-left-radius: 4px;
+    }
   }
 
   &--name {
@@ -93,6 +103,11 @@ $white: #ffffff;
     display: flex;
 
     &--status {
+      font-size: 18px;
+    }
+
+    &--reviews {
+      border: none;
       font-size: 18px;
     }
   }
