--- a/react-front-end/src/sass/savings.scss
+++ b/react-front-end/src/sass/savings.scss
@@ -5,6 +5,13 @@
   @include flexRow;
   height: 100vh;
 
+  table {
+    z-index: 3;
+  }
+
+  .total-saved {
+    color: $OrangePeel;
+  }
 }
 
 #piggy-animation {
@@ -49,7 +56,7 @@ html, body {
   text-align: center;
   color: #313133;
   background: #4FD1C5;
-background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
+  background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
   border: none;
   border-radius: 1000px;
   box-shadow: 12px 12px 24px rgba(79,209,197,.64);
@@ -89,8 +96,9 @@ button {
 .pig-image {
   top: 5px;
   left: 0px;
- position:absolute;
+  position:absolute;
   z-index: 6;
+  display: none;
 }
 
 .pig-break {
@@ -116,4 +124,8 @@ button {
 
 .form-check-input {
   z-index: 10;
+}
+
+.track {
+  color: $OrangePeel;
 }
