--- a/client/src/components/Stamp.scss
+++ b/client/src/components/Stamp.scss
@@ -11,6 +11,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+  & img {
+    object-fit: fill;
+      height: 100%;
+      width: 100%;
+  }
+
   }
 
   &--name {
