completes st;yiong for savings page card

--- a/react-front-end/src/sass/partials/_variables.scss
+++ b/react-front-end/src/sass/partials/_variables.scss
@@ -12,7 +12,7 @@ $PersianGreen: #2A9D8F;
 $OrangePeel: #FFA10A;
 $OrangePantone: #FF600A;
 $Cerise: #F50062;
-
+$OrangeBlood: #ee7724; 
 
 //login primary colors
 // #ee7724; 
