--- a/react-front-end/src/sass/savings.scss
+++ b/react-front-end/src/sass/savings.scss
@@ -12,6 +12,14 @@
   .total-saved {
     color: $OrangePeel;
   }
+
+  .advice {
+    color: $OrangePantone;
+  }
+
+  .days-until {
+    color: $OrangeBlood;
+  }
 }
 
 #piggy-animation {
