styles vaction start card on savings page

--- a/react-front-end/src/sass/savings.scss
+++ b/react-front-end/src/sass/savings.scss
@@ -142,3 +142,11 @@ button {
 .new-goals {
   margin-right: 200px;
 }
+
+.vacation-start {
+  position: absolute;
+  top: 20vh;
+  left: 25vw;
+  z-index: 5;
+  width: 50vw;
+}
