--- a/react-front-end/src/sass/savings.scss
+++ b/react-front-end/src/sass/savings.scss
@@ -52,10 +52,12 @@ html, body {
   justify-content: center;
 }
 
+
 .button-vac {
   z-index: 20;
-  right: 150px;
-  width: 80vw;
+  right: 29vw;
+  width: 40vw;
+  height:20vh;
   max-height: 10vh;
   min-height: 60px;
   font-family: 'Nunito', sans-serif;
@@ -76,28 +78,68 @@ html, body {
   position: absolute;
   padding: 10px;
   bottom: 15vh;
+  
+  &::before {
+    content: '';
+      border-radius: 1000px;
+      min-width: calc(300px + 12px);
+      min-height: calc(60px + 12px);
+      border: 6px solid #00FFCB;
+      box-shadow: 0 0 60px rgba(0,255,203,.64);
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      opacity: 0;
+      transition: all .3s ease-in-out 0s;
+    }
+
+
+    
+    .button-vac:hover, .button-vac:focus {
+      color: #313133;
+      transform: translateY(-6px);
+    }
+    
+    &:hover::before, button:focus::before {
+      opacity: 1;
+    }
+    
+    &::after {
+      content: '';
+      width: 30px; height: 30px;
+      border-radius: 100%;
+      border: 6px solid #00FFCB;
+      position: absolute;
+      z-index: -1;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      animation: ring 1.5s infinite;
+    }
+    
+    &:hover::after, button:focus::after {
+      animation: none;
+      display: none;
+    }
+    
+    @keyframes ring {
+      0% {
+        width: 30px;
+        height: 30px;
+        opacity: 1;
+      }
+      100% {
+        width: 300px;
+        height: 300px;
+        opacity: 0;
+      }
+    }
   }
 
+  
 
 
-.button-vac:hover, .button-vac:focus {
-  color: #313133;
-  transform: translateY(-6px);
-}
-
-
-@keyframes ring {
-  0% {
-    width: 30px;
-    height: 30px;
-    opacity: 1;
-  }
-  100% {
-    width: 300px;
-    height: 300px;
-    opacity: 0;
-  }
-}
 
 button {
   all: unset;
