changes login page colours

--- a/react-front-end/src/sass/login.scss
+++ b/react-front-end/src/sass/login.scss
@@ -18,7 +18,9 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 .banner {
-  background-color: rgb(181, 175, 175);
+  background-color: #9fd1cd;
+  background-image: url(http://www.transparenttextures.comnone);
+
 }
 
 .image {
