--- a/react-front-end/src/sass/signup.scss
+++ b/react-front-end/src/sass/signup.scss
@@ -1,10 +1,10 @@
 @import './partials/mixins';
 @import './partials/variables';
-// @import '~mdb-ui-kit/css/mdb.min.css';
+@import '~mdb-ui-kit/css/mdb.min.css';
 
 .gradient-custom-3 {
 	/* fallback for old browsers */
-	background: #84fab0;
+	background: #aff4c8;
 
 	/* Chrome 10-25, Safari 5.1-6 */
 	background: -webkit-linear-gradient(
