--- a/react-front-end/src/sass/login.scss
+++ b/react-front-end/src/sass/login.scss
@@ -18,8 +18,8 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 .banner {
-  background-color: #9fd1cd;
-  background-image: url(http://www.transparenttextures.comnone);
+  background-color: #363e3d;
+  background-image: url(http://www.transparenttextures.com/patterns/white-diamond.png);
 
 }
 
