--- a/react-front-end/src/sass/profile.scss
+++ b/react-front-end/src/sass/profile.scss
@@ -2,7 +2,11 @@
 @import './partials/variables';
 
 @import '~mdb-ui-kit/css/mdb.min.css';
-
+#profile {
+  background-color: #c8fffabb;
+  background-image: url(http://www.transparenttextures.comnone);
+  background-image: url(http://www.transparenttextures.com/patterns/type.png)
+}
 .vw-100 {
   background-color: rgba(249, 216, 175, 0.543);
 }
