changes color of vacation mode button and adjusts hover effects

--- a/react-front-end/src/sass/savings.scss
+++ b/react-front-end/src/sass/savings.scss
@@ -1,5 +1,12 @@
 @import './partials/mixins';
 @import './partials/variables';
+#savings {
+  width: 100vw;
+  height: 100vh;
+  background-color: #9fd1cd;
+  background-image: url(http://www.transparenttextures.com/patterns/pinstripe.png);
+
+}
 
 .goal-container {
   @include flexRow;
@@ -55,7 +62,7 @@ html, body {
 
 .button-vac {
   z-index: 20;
-  right: 29vw;
+  right: 30vw;
   width: 40vw;
   height:20vh;
   max-height: 10vh;
@@ -67,11 +74,11 @@ html, body {
   font-weight: 700;
   text-align: center;
   color: #313133;
-  background: #4FD1C5;
-  background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
+  background: $OrangePeel;
+  background: linear-gradient(90deg, $OrangePeel 0%, $Cerise 100%);
   border: none;
   border-radius: 1000px;
-  box-shadow: 12px 12px 24px rgba(79,209,197,.64);
+  box-shadow: 12px 12px 24px $OrangePeel;
   transition: all 0.3s ease-in-out 0s;
   cursor: pointer;
   outline: none;
@@ -82,10 +89,10 @@ html, body {
   &::before {
     content: '';
       border-radius: 1000px;
-      min-width: calc(300px + 12px);
-      min-height: calc(60px + 12px);
-      border: 6px solid #00FFCB;
-      box-shadow: 0 0 60px rgba(0,255,203,.64);
+      min-width: calc(40vw + 12px);
+      min-height: calc(10vh + 12px);
+      border: 6px solid $OrangePeel;
+      box-shadow: 0 0 60px $OrangePeel;
       position: absolute;
       top: 50%;
       left: 50%;
@@ -107,7 +114,7 @@ html, body {
     
     &::after {
       content: '';
-      width: 30px; height: 30px;
+      width: 40px; height: 40px;
       border-radius: 100%;
       border: 6px solid #00FFCB;
       position: absolute;
@@ -118,16 +125,17 @@ html, body {
       animation: ring 1.5s infinite;
     }
     
-    &:hover::after, button:focus::after {
-      animation: none;
-      display: none;
-    }
+    // &:hover::after, button:focus::after {
+    //   animation: none;
+    //   display: none;
+    // }
     
     @keyframes ring {
       0% {
         width: 30px;
         height: 30px;
         opacity: 1;
+        z-index: 1;
       }
       100% {
         width: 300px;
