--- a/react-front-end/src/sass/expenses.scss
+++ b/react-front-end/src/sass/expenses.scss
@@ -53,22 +53,15 @@
     border-radius: 8px;
   }
 
-  .expense-button {
-    color:red;
-    position: absolute;
-    right: 0;
+  #add-expense {
     border-radius: 5px;
     border-style: none;
-    opacity: 0.5;
-    transform: scale(0.7);
+    transform: scale(0.9);
     &:hover {
-      color: white;
-      background-color: red;
       border: solid;
-      transition: all .4s ease-in;
-      transform: scaleX(1.1);
+      transition: all .3s ease-in;
+      transform: scaleX(1);
       opacity: 1;
-      font-weight: 500;
     }
   }
 }
