--- a/react-front-end/src/sass/expenses.scss
+++ b/react-front-end/src/sass/expenses.scss
@@ -5,8 +5,9 @@
 
 #expenses-page {
   height: 100vh;
-  background-color:rgba(154, 154, 154, 0.468);
-    
+  background-color:rgba(179, 189, 188, 0.468);
+  background-image: url(http://www.transparenttextures.com/pattern/Office);
+
   #expense-table {
     max-height: 50vh;
     overflow-y: scroll;
@@ -82,6 +83,26 @@
       transform: scaleX(1);
       opacity: 1;
     }
+  }
+
+  .submit {
+    &:hover {
+      background-color: 0% 100%;
+      transition: all .3s ease-in;
+    }
+  }
+  .cancel {
+    opacity: 0.8;
+    &:hover {
+      opacity: 1;
+      background-color: 0% 100%;
+      transition: all .3s ease-in;
+    }
+  }
+
+  #line {
+    background-color: #ffffff;
+    max-width: 95vw;
   }
   
 }
