colors background of break banner

--- a/react-front-end/src/sass/savings.scss
+++ b/react-front-end/src/sass/savings.scss
@@ -175,6 +175,9 @@ button {
   position: absolute;
   top: 22vh;
   left: 32vw;
+  border: solid;
+  border-color: $OrangePeel;
+  background-color: rgba(228, 154, 26, 0.427);
 }
 #piggy-break {
   color: $Cerise;
