piggy break text no longer going through the input card

--- a/react-front-end/src/sass/savings.scss
+++ b/react-front-end/src/sass/savings.scss
@@ -168,14 +168,18 @@ button {
   z-index: 6;
   // display: none;
 }
-#break-title {
+.break-title {
   z-index: 7;
   width: 30vw;
   transform: rotate(-30deg);
   position: absolute;
   top: 22vh;
   left: 32vw;
+  border: solid;
+  border-color: $OrangePeel;
+  background-color: rgba(228, 154, 26, 0.427);
 }
+
 #piggy-break {
   color: $Cerise;
   font-weight: bolder;
