--- a/react-front-end/src/css/signup.css
+++ b/react-front-end/src/css/signup.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900");
+@import '~mdb-ui-kit/css/mdb.min.css';
 .gradient-custom-3 {
   /* fallback for old browsers */
-  background: #84fab0;
+  background: #aff4c8;
   /* Chrome 10-25, Safari 5.1-6 */
   background: -webkit-linear-gradient(to right, rgba(132, 250, 176, 0.5), rgba(143, 211, 244, 0.5));
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
