--- a/react-front-end/src/css/savings.css
+++ b/react-front-end/src/css/savings.css
@@ -1,16 +1,46 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900");
+#savings {
+  width: 100vw;
+  height: 100vh;
+  background-color: #9fd1cd;
+  background-image: url(http://www.transparenttextures.com/patterns/pinstripe.png);
+}
+
+.blur {
+  position: fixed;
+  transition: all 0.4s ease-in;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.728);
+  z-index: 0;
+}
+
 .goal-container {
   display: flexbox;
   flex-direction: row;
   height: 100vh;
 }
+.goal-container table {
+  z-index: 3;
+}
+.goal-container .total-saved {
+  color: #FFA10A;
+}
+.goal-container .advice {
+  color: #FF600A;
+}
+.goal-container .days-until {
+  color: #ee7724;
+}
 
 #piggy-animation {
   position: absolute;
-  opacity: 0.5;
-  top: 200px;
+  opacity: 0.6;
+  top: 35vh;
   right: 150px;
-  z-index: 0;
+  z-index: 1;
   transform: scale(2);
   border-radius: 100%;
   width: 26%;
@@ -20,4 +50,165 @@
 
 #progress-circle {
   z-index: 5;
+}
+
+html, body {
+  height: 100%;
+}
+
+.wrap {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button-vac {
+  z-index: 20;
+  right: 30vw;
+  width: 40vw;
+  height: 20vh;
+  max-height: 10vh;
+  min-height: 60px;
+  font-family: "Nunito", sans-serif;
+  font-size: 22px;
+  text-transform: uppercase;
+  letter-spacing: 1.3px;
+  font-weight: 700;
+  text-align: center;
+  color: #313133;
+  background: #FFA10A;
+  background: linear-gradient(90deg, #FFA10A 0%, #F50062 100%);
+  border: none;
+  border-radius: 1000px;
+  box-shadow: 12px 12px 24px #FFA10A;
+  transition: all 0.3s ease-in-out 0s;
+  cursor: pointer;
+  outline: none;
+  position: absolute;
+  padding: 10px;
+  bottom: 15vh;
+}
+.button-vac::before {
+  content: "";
+  border-radius: 1000px;
+  min-width: calc(40vw + 12px);
+  min-height: calc(10vh + 12px);
+  border: 6px solid #FFA10A;
+  box-shadow: 0 0 60px #FFA10A;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: all 0.3s ease-in-out 0s;
+}
+.button-vac .button-vac:hover, .button-vac .button-vac:focus {
+  color: #313133;
+  transform: translateY(-6px);
+}
+.button-vac:hover::before, .button-vac button:focus::before {
+  opacity: 1;
+}
+.button-vac::after {
+  content: "";
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  border: 6px solid #00FFCB;
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: ring 1.5s infinite;
+}
+.button-vac:hover::after, .button-vac button:focus::after {
+  animation: ring 0.8s infinite;
+}
+@keyframes ring {
+  0% {
+    width: 30px;
+    height: 30px;
+    opacity: 1;
+    z-index: 1;
+  }
+  100% {
+    width: 300px;
+    height: 300px;
+    opacity: 0;
+  }
+}
+
+button {
+  all: unset;
+  cursor: pointer;
+}
+
+.pig-image {
+  top: 5px;
+  left: 22vw;
+  position: absolute;
+  z-index: 6;
+}
+
+.break-title {
+  z-index: 7;
+  width: 30vw;
+  transform: rotate(-30deg);
+  position: absolute;
+  top: 22vh;
+  left: 32vw;
+  border: solid;
+  border-color: #FFA10A;
+  background-color: rgba(228, 154, 26, 0.427);
+}
+
+#piggy-break {
+  color: #F50062;
+  font-weight: bolder;
+  font-size: 3rem;
+}
+
+.pig-break {
+  transform: scale(1.7);
+  position: absolute;
+  opacity: 1;
+  top: 116px;
+  left: 34vw;
+  z-index: 8;
+  border-radius: 20rem;
+}
+
+.disappear {
+  display: none;
+  transition: all 0.4s ease-in;
+}
+
+#switch {
+  width: 60%;
+}
+
+#switch-right {
+  width: 40%;
+}
+
+.form-check-input {
+  z-index: 4;
+}
+
+.track {
+  color: #FFA10A;
+}
+
+.new-goals {
+  margin-right: 200px;
+}
+
+.vacation-start {
+  position: absolute;
+  top: 20vh;
+  left: 25vw;
+  z-index: 5;
+  width: 50vw;
 }
