--- a/react-front-end/src/css/expenses.css
+++ b/react-front-end/src/css/expenses.css
@@ -2,11 +2,17 @@
 @import '~mdb-ui-kit/css/mdb.min.css';
 #expenses-page {
   height: 100vh;
+  background-color: rgba(179, 189, 188, 0.468);
+  background-image: url(http://www.transparenttextures.com/pattern/Office);
 }
 #expenses-page #expense-table {
-  max-height: 300px;
+  max-height: 50vh;
   overflow-y: scroll;
   scroll-behavior: smooth;
+  border-radius: 1%;
+  border: solid;
+  border-width: 2px 2px 10px 3px;
+  border-color: #FFA10A;
 }
 #expenses-page .textalign {
   text-align: center;
@@ -15,8 +21,10 @@
 }
 #expenses-page .disappear {
   display: none;
+  transition: all 0.4s ease-in;
 }
 #expenses-page #input-card {
+  transition: all 0.4s ease-in;
   position: absolute;
   left: 25vw;
   top: 40vh;
@@ -25,10 +33,61 @@
 }
 #expenses-page .blur {
   position: fixed;
+  transition: all 0.4s ease-in;
   top: 0;
   left: 0;
   height: 100vh;
   width: 100vw;
   background-color: rgba(0, 0, 0, 0.728);
   z-index: 0;
+}
+#expenses-page #graph-thumbnail {
+  width: 100%;
+  border-radius: 8px;
+}
+#expenses-page .expense-button {
+  color: red;
+  background-color: none;
+  position: absolute;
+  right: 0;
+  border-radius: 5px;
+  border-style: none;
+  opacity: 0.5;
+  transform: scale(0.7);
+}
+#expenses-page .expense-button:hover {
+  z-index: 3;
+  background-color: rgba(255, 0, 0, 0.666);
+  background-position: 0% 100%;
+  transition: all 0.3s ease-in;
+  transform: scaleX(1);
+  opacity: 1;
+  font-weight: 500;
+}
+#expenses-page #add-expense {
+  border-radius: 5px;
+  border-style: none;
+  transform: scale(0.9);
+}
+#expenses-page #add-expense:hover {
+  border: solid;
+  transition: all 0.3s ease-in;
+  transform: scaleX(1);
+  opacity: 1;
+}
+#expenses-page .submit:hover {
+  background-color: 0% 100%;
+  transition: all 0.3s ease-in;
+}
+#expenses-page .cancel {
+  opacity: 0.8;
+}
+#expenses-page .cancel:hover {
+  opacity: 1;
+  background-color: 0% 100%;
+  transition: all 0.3s ease-in;
+}
+#expenses-page #line {
+  background-color: #ffffff;
+  max-width: 95vw;
 }
