money background for signup page

--- a/react-front-end/src/sass/signup.scss
+++ b/react-front-end/src/sass/signup.scss
@@ -44,5 +44,5 @@
 }
 
 .bg-image {
-	background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');
+	background-image: url('https://wallpaperaccess.com/full/333537.jpg');
 }
