--- a/react-front-end/src/components/Nav.scss
+++ b/react-front-end/src/components/Nav.scss
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700&display=swap");
+
+// colors: #212529, #ced4da, #f8f9fa
 
 * {
   box-sizing: border-box;
@@ -6,14 +9,17 @@
 
 body {
   margin: auto;
+  padding: auto;
   /* font-family: "Roboto", sans-serif; */
   /* display: flex; */
   /* justify-content: center; */
 }
 
 .nav {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
   background-color: rgb(255, 255, 255);
-  color: black;
+
   display: flex;
   justify-content: space-between;
   align-items: stretch;
@@ -22,33 +28,41 @@ body {
   position: fixed;
   top: 0; /* Position the navbar at the top of the page */
   width: 100vw; /* Full width */
-  padding: 0 3rem;
-
+  padding: 0 2rem;
+  border-bottom: 0.5px solid #000;
 }
 
 .links {
   display: flex;
-  justify-content: space-between;
-  align-self: center;
-  font-weight: 200;
+  align-items: center;
+  justify-items: center;
+  font-weight: 400;
+  color: #000;
 }
+
 .logo {
+  display: flex;
   font-size: 26px;
   align-self: center;
+  text-decoration: none;
   font-weight: 500;
 }
 
 .nav ul {
   /* margin:0; */
-  list-style: none;
   display: flex;
+  list-style: none;
   gap: 2rem;
 }
 
 .nav-item {
+  text-decoration: none;
   font-size: 20px;
-  /* height: 100%; */
   display: flex;
-  align-items: center;
-  /* font-weight: 300; */
+  color: #000;
+}
+
+.nav-item:hover {
+  color: #ced4da;
+  transition: 0.3s;
 }
