--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -25,6 +25,12 @@
   grid-area: 4 / 2 / 4 / 5;
 }
 
+.nav-bar {
+  height: 8vh;
+  grid-template-columns: 90%;
+  justify-content: center;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 .user-profile::-webkit-scrollbar {
   display: none;
