Add final touches to height bug on cards

--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -56,6 +56,12 @@
   grid-template-rows: 5% repeat(3, 1fr) 5%;
 } 
 
+.user-photos-container > img {
+  object-fit: cover;
+  object-position: top;
+  width: 100%;
+}
+
 .keen-tinder-card {
   grid-area: 2 / 3 / 5 / 5;
   min-width: 0;
