--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -130,6 +130,18 @@
   border-radius: 20px;
 }
 
+.emoji-picker-react > * {
+  background-color: #fff;
+}
+
+.emoji-group {
+  background-color: #fff;
+}
+
+.emoji {
+  background-color: #fff;
+}
+
 
 
 
