Add more matched users, see filtered messages per user id

--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -78,8 +78,12 @@
   grid-template-rows: repeat(14, 1fr);
 }
 
-.test-list {
-  grid-area: 2 / 3 / 14 / 5;
+.matches-list-header {
+  grid-area: 2 / 3 / 3 / 5;
+}
+
+.matches-bubble-list {
+  grid-area: 3 / 3 / 14 / 5;
 }
 
 .conversation-container {
