Add font to logo header, update browser tab icon and name

--- a/react-front-end/src/App.css
+++ b/react-front-end/src/App.css
@@ -25,6 +25,10 @@
   grid-area: 4 / 2 / 4 / 5;
 }
 
+.myfont {
+  font-family: 'Lobster', cursive;
+}
+
 .nav-bar {
   height: 8vh;
   grid-template-columns: 90%;
