--- a/react-front-end/src/styles/course-details.css
+++ b/react-front-end/src/styles/course-details.css
@@ -1,19 +1,35 @@
-.number-description{
-  /* display: flex;
-  text-align: center; */
-
-  
+.step-and-description{
+  display: flex;
+  text-align: center;
+  font-size: x-large;
 }
 
-.article {
-  /* font-size: x-large; */
+.step {
+  top: 0;
 }
 
-.image-video {
-  /* display: flex;
-  justify-content: space-around;
-  padding: 0;
-  margin: 0;
-  height: 100%;
-  object-fit: cover; */
+.description {
+
+}
+
+.video2 {
+  height: 20rem;
+  width: 30rem;
+}
+
+.step-tracker {
+
+}
+
+.admin-form {
+
+}
+
+.all-resources {
+
+
+}
+
+.article-link{
+  text-decoration: none;
 }
