--- a/react-front-end/src/styles/button.css
+++ b/react-front-end/src/styles/button.css
@@ -2,12 +2,13 @@
   width: 9em;
   height: 3em;
   border-radius: 30em;
-  font-size: 15px;
+  font-size: 18px;
   font-family: inherit;
   border: none;
   position: relative;
   overflow: hidden;
   z-index: 1;
+
 
 }
 
@@ -30,5 +31,6 @@
 }
 
 #complete-step.step-complete{
-  background-color: rgb(156, 105, 156);
+  background-color: rgb(142, 108, 206);
+  color: white;
 }
