--- a/react-front-end/src/styles/course-details.css
+++ b/react-front-end/src/styles/course-details.css
@@ -1,35 +1,74 @@
 .step-and-description{
-  display: flex;
-  text-align: center;
-  font-size: x-large;
-}
-
-.step {
+  text-align: left;
   top: 0;
-}
-
-.description {
 
 }
+
+
+.article-link {
+  /* text-decoration: none; */
+  color: #0466c8;
+  font-size: large;
+  font-weight: bolder;
+}
+
+div {
+  padding-top: 12px;
+}
+
 
 .video2 {
-  height: 20rem;
-  width: 30rem;
+  height: 25rem;
+  width: 40rem;
 }
 
-.step-tracker {
-
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 20px;
+  font-weight: bold;
 }
 
-.admin-form {
-
+.edit-and-delete {
+  display: flex;
+  flex-direction: row;
 }
 
-.all-resources {
-
-
+.edit {
+  margin-right: 50px;
 }
 
-.article-link{
-  text-decoration: none;
+.edit-button {
+  width: 9em;
+  height: 3em;
+  border-radius: 30em;
+  font-size: 18px;
+  font-family: inherit;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.delete-button {
+  width: 9em;
+  height: 3em;
+  border-radius: 30em;
+  font-size: 18px;
+  font-family: inherit;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.create-button {
+  width: 9em;
+  height: 3em;
+  border-radius: 30em;
+  font-size: 18px;
+  font-family: inherit;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  margin-left: 50px;
 }
