--- a/react-front-end/src/styles/profile.css
+++ b/react-front-end/src/styles/profile.css
@@ -1,3 +1,18 @@
 .profile-pic {
   height: 200px;
 }
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+}
+
+.profile-header {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 10%;
+  border: 2px solid black;
+  margin-top: 10%;
+}
