--- a/react-front-end/src/styles/profile.css
+++ b/react-front-end/src/styles/profile.css
@@ -1,5 +1,6 @@
 .profile-pic {
   height: 200px;
+  margin: 5%;
 }
 
 main {
@@ -13,6 +14,10 @@ main {
   align-items: center;
   flex-direction: column;
   padding: 5%;
-  border: 2px solid black;
-  margin-top: 10%;
+  border: 1px solid lightgrey;
+  margin-top: 5%;
+}
+
+ul {
+  list-style-type: none;
 }
