--- a/react-front-end/src/components/Homepage.css
+++ b/react-front-end/src/components/Homepage.css
@@ -4,7 +4,7 @@
   justify-content: center;
   flex-direction: column;
   padding: 5%;
-  font-size: 45px;
+  font-size: 35px;
   border: 1px solid lightgrey
 }
 
@@ -13,8 +13,23 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  font-size: 20px;
 }
 
 .map-logo {
   height: 100px;
+}
+
+.home-join {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10%;
+}
+
+.home-plan {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10%;
 }
