Add hover state to marker, identify on map using id

--- a/react-front-end/src/components/Marker.css
+++ b/react-front-end/src/components/Marker.css
@@ -1,8 +1,33 @@
-.map-marker {
+/* .map-marker {
   height: 2em;
   width: 2em;
   background-color: red;
   border-radius: 50%;
   position: relative; 
-   
+    */
+/* } */
+
+.circle {
+  background-color: #d83b01;
+  border-radius: 50%;
+  color: #fff;
+  height: 2.5em;
+  position: relative;
+  width: 2.5em;
+
+  border: 1px solid transparent;
+}
+
+.circleText {
+  text-align: center;
+  height: 50%;
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+}
+
+.hover {
+  background-color: #0078d4;
 }
