Style join button.

--- a/react-front-end/src/components/Run.css
+++ b/react-front-end/src/components/Run.css
@@ -30,7 +30,11 @@
   align-items: flex-end;
 }
 
-.run-desc .btn {
+.join-button {
   height: 3em;
   width: 10em;
+}
+
+.join-button:hover {
+  font-weight: 800;
 }
