--- a/react-front-end/src/components/RegisterUser.css
+++ b/react-front-end/src/components/RegisterUser.css
@@ -23,3 +23,10 @@
   text-align: center;
   width: 70%;
 }
+
+.date-picker {
+  width: 100%;
+  height: 2.3em;
+  border-radius: 0.378rem;
+  border: 1px solid rgba(0, 0, 0, 0.175);
+}
