--- a/react-front-end/src/components/Map.css
+++ b/react-front-end/src/components/Map.css
@@ -1,7 +1,7 @@
-.map-container {
+/* .map-container {
   height: 100vh;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
