--- a/react-front-end/src/components/Run.css
+++ b/react-front-end/src/components/Run.css
@@ -26,6 +26,22 @@
   justify-content: space-between;
 }
 
+.run-heading .run-id {
+background-color: rgba(0, 0, 0, 0.73);
+color: white;
+font-size: 1.5rem;
+margin: -0.3em 0.3em 0 0;
+width: 2em;
+height: 2em;
+border-radius: 50%;
+text-align: center;
+padding-top:0.2em;
+}
+
+.run-heading h3 {
+    margin-right: auto;
+}
+
 .run-desc {
   align-items: flex-end;
 }
