--- a/react-front-end/src/components/Run.css
+++ b/react-front-end/src/components/Run.css
@@ -27,10 +27,12 @@
 }
 
 .run-heading .run-id {
-background-color: rgba(0, 0, 0, 0.73);
+/* background-color: rgba(0, 0, 0, 0.73); */
+background-color: #d83a01c3;
 color: white;
 font-size: 1.5rem;
-margin: -0.3em 0.3em 0 0;
+font-weight: 800;
+margin: -0.3em 0.5em 0 0;
 width: 2em;
 height: 2em;
 border-radius: 50%;
