--- a/react-front-end/src/components/Homepage.css
+++ b/react-front-end/src/components/Homepage.css
@@ -2,10 +2,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
+  flex-direction: row;
   padding: 5%;
   font-size: 35px;
   border: 1px solid lightgrey
+}
+
+.logo {
+  width: 40%;
+  height: 40%;
 }
 
 .home-runs {
