--- a/react-front-end/src/components/Homepage.css
+++ b/react-front-end/src/components/Homepage.css
@@ -1,41 +1,68 @@
-.home-intro {
+.home {
+  height: 92vh;
+  width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   flex-direction: row;
-  padding: 5%;
-  font-size: 35px;
-  border: 1px solid lightgrey
+  padding: 2em;
+  font-family: "Krub", sans-serif;
+  border: 1px solid lightgrey;
+  color: #3e363e;
+}
+
+.home .home-intro {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.home h2 {
+  font-size: 90px;
+  font-weight: 100;
+  text-align: center;
+}
+
+.home p {
+  font-size: 20px;
+  font-weight: 200;
+  text-align: center;
+  max-width: 86%;
 }
 
 .logo {
-  width: 40%;
-  height: 40%;
+  width: 75%;
 }
 
-.home-runs {
+.home-actions {
+  margin-top: 1em;
   display: flex;
+  align-items: center;
+  justify-content: space-around;
   flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  font-size: 20px;
+  font-size: 50px;
+  font-weight: 100;
 }
 
-.map-logo {
-  height: 100px;
+.home-actions a {
+  color: #3e363e;
+  text-decoration: none;
+  background-color: #3e363e3b;
+  width: 15rem;
+  height: 15rem;
+  border-radius: 0.375rem;
+  border: 1px solid lightgray;
+  text-align: center;
+  padding-top: 30px;
 }
 
-.home-join {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 10%;
+.home-actions a:hover {
+  background-color: #3e363e5a;
+  transition: 0.5s;
 }
 
-.home-plan {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 10%;
-
+.home-actions a p {
+  font-size: 25px;
+  max-width: 100%;
 }
