--- a/react-front-end/src/components/Map.css
+++ b/react-front-end/src/components/Map.css
@@ -1,7 +1,49 @@
-/* .map-container {
-  height: 100vh;
-  width: 100%;
+.map-container {
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-} */
+  gap: 2em;
+  padding: 0 5em;
+  font-family: "Krub", sans-serif;
+}
+
+.map-info {
+  width: 30vw;
+  color: #3e363e;
+  text-align: center;
+}
+
+.map-info h2 {
+  font-size: 60px;
+  font-weight: 200;
+}
+
+.map-info p {
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.map-info .material-symbols-rounded {
+  font-size: 150px;
+  width: 100%;
+  color: #3e363e;
+  font-variation-settings: "FILL" 0, "wght" 200, "GRAD" 0, "opsz" 48;
+  animation: move 0.5s infinite alternate-reverse ease-in-out;
+  position: relative;
+}
+
+@keyframes move {
+  0% {
+    bottom: 10px;
+  }
+  100% {
+    bottom: -10px;
+  }
+}
+
+.map {
+  border-radius: 1rem;
+  overflow: hidden;
+  box-shadow: 0 0 5px lightgrey;
+}
