--- a/react-front-end/src/components/FindRun.css
+++ b/react-front-end/src/components/FindRun.css
@@ -2,8 +2,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 3em;
+  gap: 1em;
   margin-top: 2em;
+  font-family: "Krub", sans-serif;
+}
+
+#available-runs {
+  color: #3e363ebc;
+  width: 100%;
+  padding: 1em 5em;
+}
+
+#available-runs h2 {
+  font-size: 50px;
+  font-weight: 800;
+}
+
+#available-runs p {
+  font-size: 20px;
+  font-weight: 300;
 }
 
 .joining-status-header {
