--- a/react-front-end/src/components/FindRun.css
+++ b/react-front-end/src/components/FindRun.css
@@ -11,6 +11,9 @@
   color: #3e363ebc;
   width: 100%;
   padding: 1em 5em;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 #available-runs h2 {
