--- a/react-front-end/src/components/Map.css
+++ b/react-front-end/src/components/Map.css
@@ -12,6 +12,9 @@
   width: 30vw;
   color: #3e363e;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .map-info h2 {
@@ -22,6 +25,11 @@
 .map-info p {
   font-size: 20px;
   font-weight: 300;
+  
+}
+
+.map-info a {
+  text-decoration: none;
 }
 
 .map-info .material-symbols-rounded {
