--- a/react-front-end/src/components/Run.css
+++ b/react-front-end/src/components/Run.css
@@ -61,8 +61,20 @@ padding-top:0.2em;
 .join-button {
   height: 3em;
   width: 10em;
+  background-color: #d83a01c3;
+  border: none;
+  box-shadow: 0 0 5px lightgrey;
+  color: white;
+  border-radius: 0.375rem;
+  font-weight: 800;
 }
 
 .join-button:hover {
   font-weight: 800;
+  background-color: #d83a01ee;
+}
+
+.join-button[disabled] {
+  background-color: #3e363e64;
+  font-weight: 300;
 }
