--- a/react-front-end/src/components/RegisterUser.css
+++ b/react-front-end/src/components/RegisterUser.css
@@ -2,7 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1.5em;
+  padding: 2em;
+  font-family: "Krub", sans-serif;
+}
+
+.form-text {
+  color: #3e363e;
 }
 
 .form-container {
