--- a/react-front-end/src/components/Homepage.css
+++ b/react-front-end/src/components/Homepage.css
@@ -7,7 +7,7 @@
   flex-direction: row;
   padding: 2em;
   font-family: "Krub", sans-serif;
-  border: 1px solid lightgrey;
+  border-top: 1px solid lightgrey;
   color: #3e363e;
 }
 
