Add hover color to nav links

--- a/react-front-end/src/components/Navigation.css
+++ b/react-front-end/src/components/Navigation.css
@@ -6,3 +6,12 @@
   width: 2em;
   height: 2em;
 }
+
+.nav-link {
+  height: 100%;
+}
+
+.nav-link:hover {
+  background-color: #d83a01c3;
+  color: white;
+}
